[project]
name = "gateway-router"
version = "0.1.0"
description = "OpenAI-compatible router; nonce vault, capability catalog, batch builder."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.7,<3.0",
    "redis>=5.0",
    "mining-types",
    # sr25519 verification for the per-operator (secret-free) heartbeat path.
    "py-sr25519-bindings>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Optional: confirm operators are staked on-chain before catalog entry
# (enabled with GATEWAY_REQUIRE_ONCHAIN_OPERATOR). Kept out of the default
# install so bring-up stays dependency-light.
onchain = [
    "substrate-interface>=1.7",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway_router"]

[tool.uv.sources]
mining-types = { git = "https://github.com/orogen-network/mining-types.git", rev = "9e6d3127ce85622c65d994843be57f7efcc632b4" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
